[package]
name = "telemetry-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "async-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
custom-tracing-logger = "0.1"
tracing = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"